# weak-super

./: .gitignore  .gitmodules  Makefile  README.md  requirements.txt  setup.py  wks.config.sample
cnn/: README.md  extract_feature.pt
manual_tests/: test_hog.py
proposals/: CMakeLists.txt  README.md  edge_box_main.cpp
tests/: test_dataset.py  test_feature_extractor.py
wksuper/: MItrainer.py  __init__.py  config.py  exceptions.py  helper.py  iterative.py  meta.py  supervised.py  trainer.py
wksuper/cache/: README.md
wksuper/dataset/: __init__.py  image.py  voc.py
wksuper/detector/: __init__.py
wksuper/feature/: __init__.py  cnn.py  hog.py
wksuper/nms/: .gitignore  __init__.py  cpu_nms.c  cpu_nms.pyx
wksuper/param/: README.md
wksuper/proposal/: __init__.py  proposaler.py  ss.py  subprocess_proposaler.py
wksuper/tester/: __init__.py  bagtester.py  hook.py  record_result.py  regular.py  show_im.py  tester.py
